finished intro-section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
            </div>
         </div>  
 
-        <section class="intro">
+        <section id="intro">
+            <div class="words">
              <div class="wrapper">
                <div class="static-text "><h1> Hi, I'm Khairan.</h1> </div>
                  <h1>
@@ -47,9 +48,28 @@
                      </ul>
                  </h1>
              </div>
-             <div>
-             <h2>I started out with a fascination with websites and <br> a desire to create unforgettable ones of my own.</h2>
+             <div class="intro-p">
+             <p>I started out with a fascination with websites and <br> a desire to create unforgettable ones of my own.</p>
             </div>
+
+            <div class="btn-con">
+                <a href="https://drive.google.com/file/d/142_3AkilrverBhGBkAc6vBhl8jNrvKBx/view?usp=sharing" class="main-btn">
+                  <span class="btn-text"><h2>Download CV</h2></span>
+                  <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+               </a>
+              </div>
+          </div>
+<!-- 
+          <div class="intro-img-div">
+            <img src="images/undraw_proud_coder_re_exuy.svg" class="intro-img">
+          </div> -->
+        </section>
+
+        <section id="toolbox">
+            <div class="tb-intro">
+              <h2 class="tb-heading">My toolbox</h2>
+              <p class="tb-words">I use the following tools and technologies to bring ideas to life. </p>
+            </div>   
         </section>
     </main>
 </body>
