--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <main>
+      <!-- NAVBAR -->
         <div class="nav banner">  
             <div class="navigation">
                 <div class="nav-logo">
@@ -36,6 +37,7 @@
            </div>
         </div>  
 
+        <!-- INTRODUCTION -->
         <section id="intro">
             <div class="words">
              <div class="wrapper">
@@ -59,17 +61,86 @@
                </a>
               </div>
           </div>
-<!-- 
+
           <div class="intro-img-div">
-            <img src="images/undraw_proud_coder_re_exuy.svg" class="intro-img">
-          </div> -->
+            <img src="images/yellowHumaaans - Sitting.png" class="intro-img">
+          </div>
         </section>
 
         <section id="toolbox">
             <div class="tb-intro">
-              <h2 class="tb-heading">My toolbox</h2>
+              <h2 class="tb-heading">My Toolbox</h2>
               <p class="tb-words">I use the following tools and technologies to bring ideas to life. </p>
             </div>   
+
+            <div class="tools">
+              <div class="box-icon">
+                <i class="fab fa-brands fa-html5"></i>
+                <p>HTML</p>
+              </div>
+              <div class="box-icon">
+                <i class="fab fa-brands fa-css3-alt"></i>
+                <p>CSS</p>
+              </div>
+              <div class="box-icon">
+                <i class="fab fa-brands fa-bootstrap"></i>
+                <p>Bootstrap</p>
+              </div>
+              <div class="box-icon">
+                <i class="fab fa-brands fa-square-js"></i>
+                <p>Javascript</p>
+              </div>
+              <div class="box-icon">
+                <i class="fab fa-brands fa-react"></i>
+                <p>React</p>
+              </div>
+              <div class="box-icon">
+                <i class="fab fa-brands fa-git-alt"></i>
+                <p>Git</p>
+              </div>
+              <div class="box-icon">
+                <i class="fab fa-brands fa-github"></i>
+                <p>Github</p>
+              </div>
+            </div>
+        </section>
+
+        <!-- PORTFOLIO -->
+        <section id="portfolio">
+          <div class="tb-intro">
+            <h2 class="tb-heading">Portfolio</h2>
+            <p class="tb-words">Here are some projects I have worked on.</p>
+          </div>
+
+          <div class="port-projects">
+            <div class="project">
+              <div class="project-img">
+                <img class="p-mealy" src="images/mealyPNG.png" alt="Mealy Project">
+              </div>
+              
+              <div class="project-desc">
+                <h3>Mealy</h3>
+                <p>An app for ordering food and drinks. The app is designed to make it easy and convenient for users to order their favorite meals and drinks from local restaurants and cafes. A team project built in collaboration with 7 other developers.</p>
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-react"></i>
+                <i class="fa-brands fa-square-js"></i>
+                <div class="p-btn">
+                <button><a href="">See Website</a></button>
+                <button><a href="">View source code</a></button>
+              </div>
+              </div>
+            </div>
+            <div class="project">
+              <div class="project-desc"></div>
+              <div class="project-img"></div>
+            </div>
+            <div class="project">
+              <div class="project-desc"></div>
+              <div class="project-img"></div>
+            </div>
+            <div class="project"></div>
+          </div>
         </section>
     </main>
 </body>
