added portfolio project

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             <p class="tb-words">Here are some stuff I have built.</p>
           </div>
 
-          <div class="port-projects">
+           <div class="port-projects"> <!-------MEALY---- -->
             <div class="project">
               <div class="project-img">
-                <img class="p-mealy" src="images/mealyPNG.png" alt="Mealy Project">
+                <img class="p-mealy" src="images/MealyPic.png" alt="Mealy Project">
               </div>
               
               <div class="project-desc">
@@ -127,21 +127,33 @@
                 <i class="p-i fa-brands fa-react"></i>
                 <i class="p-i fa-brands fa-square-js"></i>
                 </div>
-                <div>
-                <button class="p-btn"><a href="">See Website</a></button>
-                <button class="p-btn"><a href="">View source code</a></button>
+                <div class="project-buttons">
+                <button class="p-btn"><a href="https://project-mealy.netlify.app/">See Website</a></button>
+                <button class="p-btn"><a href="https://github.com/Stutern-Project-23/Group-4-Mealy-Project-Team-2A">View source code</a></button>
               </div>
               </div>
             </div>
-            <div class="project">
-              <div class="project-desc"></div>
-              <div class="project-img"></div>
+
+            <div class="project"> <!--  PORTFOLIO -->
+              <div class="project-img">
+                <img class="f-port" src="images/PortfolioPic.png" alt="First Portfolio">
+              </div>
+              
+              <div class="project-desc">
+                <h3>First Portfolio</h3>
+                <p>This was the first version of my portfolio site.</p>
+                <div class="p-icons">
+                <i class="p-i fa-brands fa-html5"></i>
+                <i class="p-i fa-brands fa-sass"></i>
+                <i class="p-i fa-brands fa-square-js"></i>
+                </div>
+                <div class="project-buttons">
+                <button class="p-btn"><a href="https://khairanadiji.github.io/Portfolio/">See Website</a></button>
+                <button class="p-btn"><a href=https://github.com/KhairanADiji/Portfolio">View source code</a></button>
+              </div>
+              </div>
             </div>
-            <div class="project">
-              <div class="project-desc"></div>
-              <div class="project-img"></div>
-            </div>
-            <div class="project"></div>
+
           </div>
         </section>
 
