--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
            <div class="port-projects"> <!-------MEALY---- -->
             <div class="project">
               <div class="project-img">
-                <img class="p-mealy" src="images/MealyPic.png" alt="Mealy Project">
+                <img class="p-img" src="images/MealyPic.png" alt="Mealy Project">
               </div>
               
               <div class="project-desc">
@@ -136,12 +136,12 @@
 
             <div class="project"> <!--  PORTFOLIO -->
               <div class="project-img">
-                <img class="f-port" src="images/PortfolioPic.png" alt="First Portfolio">
+                <img class="p-img" src="images/PortfolioPic2.png" alt="First Portfolio">
               </div>
               
               <div class="project-desc">
                 <h3>First Portfolio</h3>
-                <p>This was the first version of my portfolio site.</p>
+                <p>This was the first version of my portfolio site. Here, I tried out a different type of navigation bar and light and dark themes.</p>
                 <div class="p-icons">
                 <i class="p-i fa-brands fa-html5"></i>
                 <i class="p-i fa-brands fa-sass"></i>
@@ -214,6 +214,12 @@
     </div>
         </section>
 
+
+      <section id="footer">
+        <div class="f-words">
+          <p>2022 | Designed and coded by Khairan Adediji</p>
+        </div>
+      </section>
     </main>
 </body>
 </html>
