--- a/index.html
+++ b/index.html
@@ -154,6 +154,49 @@
               </div>
             </div>
 
+            <div class="port-projects"> <!-------TO-DO LIST---- -->
+              <div class="project">
+                <div class="project-img">
+                  <img class="p-img" src="images/to-do-list.png" alt="To-Do List Project">
+                </div>
+                
+                <div class="project-desc">
+                  <h3>To-Dos and Dones</h3>
+                  <p>Want to organise your tasks for the day and keep up with work? Try out this handy little to-do list!</p>
+                  <div class="p-icons">
+                  <i class="p-i fa-brands fa-html5"></i>
+                  <i class="p-i fa-brands fa-css3-alt"></i>
+                  <i class="p-i fa-brands fa-square-js"></i>
+                  </div>
+                  <div class="project-buttons">
+                  <button class="p-btn"><a href="https://to-dos-and-dones.netlify.app/">See Website</a></button>
+                  <button class="p-btn"><a href="https://github.com/KhairanADiji/ToDo-List">View source code</a></button>
+                </div>
+                </div>
+              </div>
+
+              <div class="port-projects"> <!-------TINDOG---- -->
+                <div class="project">
+                  <div class="project-img">
+                    <img class="p-img" src="imageS/tindog-image.png" alt="TinDog Project">
+                  </div>
+                  
+                  <div class="project-desc">
+                    <h3>TinDog</h3>
+                    <p>Find the perfect patner for your dog by swiping right on Tindog! Tindog is a tinder clone website for dogs.</p>
+                    <div class="p-icons">
+                    <i class="p-i fa-brands fa-html5"></i>
+                    <i class="p-i fa-brands fa-css3-alt"></i>
+                    <i class="p-i fa-brands fa-square-js"></i>
+                    </div>
+                    <div class="project-buttons">
+                    <button class="p-btn"><a href="https://khairanadiji.github.io/Tindog/">See Website</a></button>
+                    <button class="p-btn"><a href="https://github.com/KhairanADiji/Tindog">View source code</a></button>
+                  </div>
+                  </div>
+                </div>
+  
+
           </div>
         </section>
 
@@ -194,14 +237,14 @@
             <div class="right-contact">
                 <form action="https://formspree.io/f/myyqylnb" method="POST" enctype="text/plain" class="contact-form">
                     <div class="input-control i-c-2">
-                        <input type="text" name="Name" required placeholder="Your Name">
-                        <input type="text" name="Email" required placeholder="Your Email">
+                        <input type="text" name="name" required placeholder="Your Name">
+                        <input type="text" name="email" required placeholder="Your Email">
                     </div>
                     <div class="input-control">
-                        <input type="text" name="Subject" required placeholder="Enter Subject">
+                        <input type="text" name="subject" required placeholder="Enter Subject">
                     </div>
                     <div class="input-control">
-                        <textarea cols="15" rows="10" name="Message" required placeholder="Message Here"></textarea>
+                        <textarea cols="15" rows="10" name="message" required placeholder="Message Here"></textarea>
                     </div>
 
                     <button type="submit" value="submit" class="btn-con">
@@ -217,7 +260,7 @@
 
       <section id="footer">
         <div class="f-words">
-          <p>2022 | Designed and coded by Khairan Adediji</p>
+          <p> &copy; 2022 | Designed and coded by Khairan Adediji</p>
         </div>
       </section>
     </main>
