--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <div class="contact-icon">
                         <a href="https://www.linkedin.com/in/khairan-adediji-131613191/" target="_blank"><i class="icon fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/KhairanADiji" target="_blank"><i class="icon fa-brands fa-github"></i></a>
-                        <a href="https://twitter.com/khairandiji" target="_blank"><i class="icon fa-brands fa-twitter"></i></a>
+                        <a href="https://twitter.com/khairandiji" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                         </div>
                     </div>
                 </div>
